--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <meta name="description" content="Aqui vas encuentrar pero pura mamada que se me ocurren xd">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="index.js"></script>
-    <title>QuackWebsite</title>
+    <title>Fernandez</title>
 </head>
 <body>
     <main>
-
         <div class="container">
       
             <div class="container_segundo">
